[package]
name = "bip138"
version = "0.0.0"
edition = "2024"
rust-version = "1.88"
readme = "README.md"
description = "BIP138 Compact encryption scheme for Non-seed wallet data"
license = "MIT"
repository = "https://github.com/pythcoiner/bip138"
documentation = "https://docs.rs/bip138"
include = ["Cargo.toml", "LICENSE", "README.md", "src/lib.rs"]
publish = true

[lib]
path = "src/lib.rs"

[dependencies]
chacha20poly1305 = {version = "0.10.1", default-features = false, features = ["alloc"]}
rand = {version = "0.9.2", optional = true}
base64 = {version = "0.22", default-features = false, features = ["alloc"], optional = true}

# Old format (BEB magic, AES-256-GCM): used solely on the decrypt path
# as a transparent fallback for backups produced by 0.0.2.
bitcoin-encrypted-backup-v0 = { version = "0.0.2", package = "bitcoin-encrypted-backup", default-features = false, optional = true }

#miniscript
mscript_12_3_5 = { version = "12.3.5", default-features = false, features = ["serde", "no-std"], package = "miniscript" , optional = true}
mscript_12_0 = { version = "12.0", default-features = false, features = ["serde", "no-std"], package = "miniscript" , optional = true}

# devices
async-hwi = { git = "https://github.com/wizardsardine/async-hwi", rev = "b7d924a0df5eeec7cdf0e03d7eb77bf48226fcb5", optional = true }

# descriptor_backup (std-only document parsing)
serde = { version = "1.0.228", features = ["derive"], optional = true }
serde_json = { version = "1.0.145", optional = true }

# cli
clap = { version = "=4.5.42", features = ["derive"] , optional = true}
tokio = { version = "1", features = ["macros", "net", "rt", "rt-multi-thread", "io-util", "sync"], optional = true}

[dev-dependencies]
hex = "0.4.3"
rand = {version = "0.9.2"}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[[bin]]
name = "beb"
path = "src/bin/main.rs"
required-features = ["cli"]

[features]
default = ["miniscript_latest", "rand", "base64", "v0", "descriptor_backup"]
rand = ["dep:rand"]
base64 = ["dep:base64"]
v0 = ["dep:bitcoin-encrypted-backup-v0"]
miniscript_latest = ["miniscript_12_3_5"]
miniscript_12_3_5 = ["mscript_12_3_5", "bitcoin-encrypted-backup-v0?/miniscript_12_3_5"]
miniscript_12_0 = ["mscript_12_0", "bitcoin-encrypted-backup-v0?/miniscript_12_0"]
tokio = ["dep:tokio"]
devices = ["dep:async-hwi", "tokio"]
descriptor_backup = ["dep:serde", "dep:serde_json"]
cli = ["dep:clap", "tokio", "miniscript_latest", "rand", "descriptor_backup"]
